// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Artwork /> should render empty success response 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c5 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

.c4 a {
  color: inherit;
}

.c4 a:hover {
  color: #000;
}

.c4 a:active {
  color: #000;
}

.c4 a.noUnderline {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a.noUnderline:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a.colorLink {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #6E1EFF;
}

.c4 a.colorLink:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 a {
  color: inherit;
}

.c6 a:hover {
  color: #000;
}

.c6 a:active {
  color: #000;
}

.c6 a.noUnderline {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 a.noUnderline:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 a.colorLink {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #6E1EFF;
}

.c6 a.colorLink:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 c4 "
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c5 c6 "
      font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
      font-size="18px"
    >
      No matching Artwork
    </div>
  </section>
</main>
`;

exports[`<Artwork /> should render loading state initially 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c5 {
  -webkit-animation: FiaaB 1s infinite linear;
  animation: FiaaB 1s infinite linear;
  position: absolute;
  background: #000;
  width: 25px;
  height: 6px;
  top: calc(50% - 6px / 2);
  left: calc(50% - 25px / 2);
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

.c4 a {
  color: inherit;
}

.c4 a:hover {
  color: #000;
}

.c4 a:active {
  color: #000;
}

.c4 a.noUnderline {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a.noUnderline:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a.colorLink {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #6E1EFF;
}

.c4 a.colorLink:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 c4 "
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c5"
      color="black100"
      height="6"
      width="25"
    />
  </section>
</main>
`;

exports[`<Artwork /> should render success response 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: 1rem;
  margin-right: 1rem;
  padding-top: 1rem;
}

.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c8 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c10 {
  color: #000;
  -webkit-transition: color 0.25s;
  transition: color 0.25s;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0 auto;
  padding: 0;
  max-width: calc(-300px + 149.986vh);
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

.c6 {
  object-fit: contain;
  width: 100%;
  height: 100%;
  vertical-align: middle;
}

.c4 a {
  color: inherit;
}

.c4 a:hover {
  color: #000;
}

.c4 a:active {
  color: #000;
}

.c4 a.noUnderline {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a.noUnderline:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a.colorLink {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #6E1EFF;
}

.c4 a.colorLink:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 a {
  color: inherit;
}

.c9 a:hover {
  color: #000;
}

.c9 a:active {
  color: #000;
}

.c9 a.noUnderline {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 a.noUnderline:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 a.colorLink {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #6E1EFF;
}

.c9 a.colorLink:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (orientation:landscape) and (max-width:899px) {
  .c5 {
    min-width: 50vw;
  }
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 c4 "
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <figure
      class="c5"
      orientation="landscape"
    >
      <img
        alt="Hossam Dirar, ‘Nefertiti’, 2018"
        class="c6"
        height="803"
        src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg"
        srcset="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg, https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_sdsdsSwZV5FxQ%2Flarge.jpg 2x"
        width="400"
      />
      <figcaption
        class="c7"
      >
        <div
          class="c8 c9 "
          font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          font-size="18px"
        >
          <strong>
            Hossam Dirar
          </strong>
        </div>
        <div
          class="c8 c9 "
          font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          font-size="18px"
        >
          Hossam Dirar, ‘Nefertiti’, 2018
        </div>
        <a
          class="c10"
          href="https://www.artsy.nethttps://artsy.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="c8 c9 "
            font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
            font-size="18px"
          >
            Source
          </div>
        </a>
      </figcaption>
    </figure>
  </section>
</main>
`;
